Require Java 8